--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "author": "Ahuanmarca",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.13.0",
+    "axios": "^0.27.1",
     "ejs": "^3.1.7",
     "ejs-mate": "^3.0.0",
     "express": "^4.18.0",
     "method-override": "^3.0.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
+  },
+  "devDependencies": {
+    "prisma": "^3.13.0"
   }
 }
