--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.7",
     "ejs-mate": "^3.0.0",
     "express": "^4.18.0",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
