--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^3.13.0",
     "axios": "^0.27.1",
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.7",
     "ejs-mate": "^3.0.0",
     "express": "^4.18.0",
