--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.13.0",
-    "axios": "^0.27.1",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
@@ -21,7 +21,8 @@
     "express": "^4.18.0",
     "express-session": "^1.17.2",
     "method-override": "^3.0.0",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "prisma": "^3.13.0"
